--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Pierwszy projekt HTML/CSS</title>
+    <title>Projekt RWD HTML/CSS</title>
   </head>
   <body>
     <div class="container">
