Basic rwd for all sections

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
 
       <div id="main-offer">
-        <h1>Czym zajmuje sie nasza firma</h1>
+        <h1 class="offer-title">Czym zajmuje sie nasza firma</h1>
         <div class="offer">
           <div class="box">
             <div class="dot"></div>
