text align  right

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               alt="zdjęcie imię nazwisko"
             />
           </div>
-          <div class="opis">
+          <div class="opis-right">
             <h3>Imię Nazwisko [dział]</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
@@ -105,7 +105,7 @@
               alt="zdjęcie imię nazwisko"
             />
           </div>
-          <div class="opis">
+          <div class="opis-right">
             <h3>Imię Nazwisko [dział]</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
